tile footer overflow fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -84,11 +84,13 @@ $hf-border-color:     #CCCCCC;
 
   .footer {
     border-top: 1px solid $hf-border-color;
-    width: auto;
+    width: inherit;
+    overflow: auto;
     padding: 0;
 
     .buttons {
       float: right;
+      overflow: auto;
       padding-top: 10px;
       padding-right: 20px;
       padding-bottom: 20px;
